style(sbb-table-wrapper): fix overflow

--- a/src/elements/table/table-wrapper/table-wrapper.scss
+++ b/src/elements/table/table-wrapper/table-wrapper.scss
@@ -6,7 +6,7 @@
 :host {
   --sbb-table-wrapper-border-radius: var(--sbb-border-radius-4x);
 
-  display: block;
+  display: contents;
 }
 
 ::slotted(.sbb-table) {
@@ -14,6 +14,7 @@
 }
 
 .sbb-table-wrapper {
+  height: 100%;
   overflow: auto;
   @include sbb.scrollbar($size: thick, $track-visible: true);
 
